SERVER-60028 Fix overly-long error messages in time-series indexing code